Working meta creator

--- a/meta_show/templates/meta_show/index.html
+++ b/meta_show/templates/meta_show/index.html
@@ -1,5 +1,6 @@
 
 <ul>
+  <li><a href="{% url 'meta_creator:creator' %}">Creator</a></li>
   <li><a href="{% url 'meta_show:crawler' %}">Crawler</a></li>
   <li><a href="{% url 'meta_show:show' %}">Meta Show</a></li>
 </ul>
