Removed meta_show

--- a/meta_creator/templates/meta_creator/creator.html
+++ b/meta_creator/templates/meta_creator/creator.html
@@ -4,7 +4,9 @@
 {% load static %}
 
 {% block scripts %}
-<form>
+<form method="post">
+  {% csrf_token %}
 {{creator}}{{creator.media}}
+  <input type="submit" value="Download">
 </form>
 {% endblock %}
