Added index view for meta creator showing supported versions

--- a/meta_creator/templates/meta_creator/creator.html
+++ b/meta_creator/templates/meta_creator/creator.html
@@ -3,8 +3,12 @@
 
 {% load static %}
 
+{% block content %}
+  <form>
+    {{creator}}
+  </form>
+{% endblock content %}
+
 {% block scripts %}
-<form>
-{{creator}}{{creator.media}}
-</form>
+  {{creator.media}}
 {% endblock %}
