First version of filesystem crawler implemented

--- a/meta_crawler/templates/meta_crawler/index.html
+++ b/meta_crawler/templates/meta_crawler/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="accordion-title">{{engine.name}} ({{engine.info}})</a>
         <div class="accordion-content" data-tab-content>
           <ul>
-            {% include 'includes/meta.html' with meta=engine.root %}
+            {% include 'meta.html' with meta=engine.root %}
           </ul>
         </div>
       </li>
