--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <ul>
   <li><a href="{% url 'meta_creator:index' %}">Meta Creator</a></li>
-  <li><a href="{% url 'meta_crawler:index' %}">Meta Show</a></li>
+  <li><a href="{% url 'meta_crawler:index' %}">Meta Crawler</a></li>
 </ul>
 {% endblock content %}
