--- a/meta_crawler/templates/meta_crawler/index.html
+++ b/meta_crawler/templates/meta_crawler/index.html
@@ -2,28 +2,32 @@
 
 {% block content %}
 
+<form method="get">
+  {{ filter.form.as_p }}
+  <input type="submit" />
+</form>
+
 <div class="grid-x grid-margin-x">
-  <div class="cell">
-    <form action="{% url 'meta_crawler:index' %}" method="post">
-      {% csrf_token %}
-      {{run_form}}
-    </form>
-  </div>
   <div class="cell small-6">
-    {% if engines %}
-    <ul class="accordion" data-accordion data-multi-expand="true">
-      {% for engine in engines %}
-      <li class="accordion-item" data-accordion-item>
-        <a href="#" class="accordion-title">{{engine.name}} ({{engine.info}})</a>
-        <div class="accordion-content" data-tab-content>
-          <ul>
-            {% include 'meta.html' with meta=engine.root %}
-          </ul>
-        </div>
-      </li>
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Name</th>
+        <th>Metadata</th>
+      </tr>
+      {% for meta in metas %}
+        <tr>
+          <td>{{meta.source}}</td>
+          <td>{{meta.title}}</td>
+          <td>{{meta.name}}</td>
+          <td><a href="javascript:get_meta({{meta.id}})">See data</a></td>
+        </tr>
+      {% empty %}
+        <tr>
+          <td>No data found</td>
+        </tr>
       {% endfor %}
-    </ul>
-    {% endif %}
+    </table>
   </div>
   <div class="cell small-6">
     <div id="meta">
